Add build bower vendors

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -15,6 +15,13 @@ html(lang="en")
 		meta(property="og:image", content="")
 
 		title stapp
+
+		// build:css css/vendor.css
+		// bower:css
+		
+		// endbower
+		// endbuild
+		
 		// build:css css/main.css
 		link(rel='stylesheet', href='css/main.css')
 		// endbuild
