change usemin to spa

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -15,25 +15,18 @@ html(lang="en")
 		meta(property="og:image", content="")
 
 		title stapp
-
-		// build:css css/vendor.css
+	
+		// build:css
 		// bower:css
-		
 		// endbower
-		// endbuild
-		
-		// build:css css/main.css
 		link(rel='stylesheet', href='css/main.css')
 		// endbuild
-	body
-		h1 Go ahead for develop!
-
-		// build:js js/vendor.js
-		// bower:js
 		
-		// endbower
-		// endbuild
+	body
 
-		// build:js js/main.js
+		h1 Go ahead for develop!
+		// build:js
+		// bower:js
+		// endbower
 		script(type='text/javascript', src='js/main.js')
 		// endbuild
