--- a/src/index.ejs
+++ b/src/index.ejs
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<!-- <%= JSON.stringify(htmlWebpackPlugin, null, '\t') %> -->
 		<title><%=htmlWebpackPlugin.options.title || 'App'%></title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<% if (htmlWebpackPlugin.files.favicon) { %>
-		<link rel="shortcut icon" href="<%=htmlWebpackPlugin.files.favicon%>">
+		<link rel="shortcut icon" href="/<%=htmlWebpackPlugin.files.favicon%>">
 		<% } %>
 
 		<% for (var css in htmlWebpackPlugin.files.css) { %>
-		<link href="<%=htmlWebpackPlugin.files.css[css] %>" rel="stylesheet">
+		<link href="/<%=htmlWebpackPlugin.files.css[css] %>" rel="stylesheet">
 		<% } %>
 	</head>
 	<body>
 		<div id="stapp"></div>
 		<% for (var chunk in htmlWebpackPlugin.files.chunks) { %>
-		<script type="text/javascript" src="<%=htmlWebpackPlugin.files.chunks[chunk].entry%>"></script>
+		<script type="text/javascript" src="/<%=htmlWebpackPlugin.files.chunks[chunk].entry%>"></script>
 		<% } %>
 	</body>
 </html>
