--- a/source/index.ejs
+++ b/source/index.ejs
@@ -6,17 +6,17 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<% if (htmlWebpackPlugin.files.favicon) { %>
-		<link rel="shortcut icon" href="/<%=htmlWebpackPlugin.files.favicon%>">
+		<link rel="shortcut icon" href="<%if (!htmlWebpackPlugin.options.ghPage) { %>/<% } %><%=htmlWebpackPlugin.files.favicon%>">
 		<% } %>
 
 		<% for (var css in htmlWebpackPlugin.files.css) { %>
-		<link href="/<%=htmlWebpackPlugin.files.css[css] %>" rel="stylesheet">
+		<link href="<%if (!htmlWebpackPlugin.options.ghPage) { %>/<% } %><%=htmlWebpackPlugin.files.css[css] %>" rel="stylesheet">
 		<% } %>
 	</head>
 	<body>
 		<div id="stapp"></div>
 		<% for (var chunk in htmlWebpackPlugin.files.chunks) { %>
-		<script type="text/javascript" src="/<%=htmlWebpackPlugin.files.chunks[chunk].entry%>"></script>
+		<script type="text/javascript" src="<%if (!htmlWebpackPlugin.options.ghPage) { %>/<% } %><%=htmlWebpackPlugin.files.chunks[chunk].entry%>"></script>
 		<% } %>
 	</body>
 </html>
