up deps, some improvements

--- a/source/styles/custom.css
+++ b/source/styles/custom.css
@@ -9,3 +9,8 @@
 	-ms-transform: translateX(-50%) translateY(-50%);
 	transform: translateX(-50%) translateY(-50%);
 }
+
+a {
+    padding-right: 5px;
+    padding-left: 5px;
+}
